--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.andigital.api</groupId>
-	<artifactId>andigital-sample-api</artifactId>
+	<artifactId>andigital-spring-data-jpa-api</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
-	<name>ANDigital Sample API</name>
+	<name>Spring Data JPA integration</name>
 
     <scm>
         <connection>scm:git:git://github.com/paul-pop/spring-boot-jetty-server-rest-api.git</connection>
@@ -18,10 +18,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.compiler.version>1.8</java.compiler.version>
 
+        <h2db.version>1.4.190</h2db.version>
         <spring.version>4.2.2.RELEASE</spring.version>
         <spring.boot.version>1.2.7.RELEASE</spring.boot.version>
 
         <junit.version>4.12</junit.version>
+        <mockito.version>1.10.19</mockito.version>
     </properties>
 
     <build>
@@ -74,35 +76,10 @@
     </build>
 
     <dependencies>
-        <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
         <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
 
@@ -116,7 +93,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-            <version>1.4.190</version>
+            <version>${h2db.version}</version>
         </dependency>
 
         <!-- Testing dependencies -->
@@ -124,6 +101,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
